# openinterpreter

./: .gitignore  BUILDING.md  Dockerfile  EXAMPLES_SAFE.md  PRIVACY_PROTECTION_RU.md  QUICKSTART_SAFE.md  README.md  README_SAFE.md  SUMMARY_SAFE.txt  TEST_RESULTS.md  WEB_SEARCH_LIMITS_RU.md  demo_safe_mode.py  docs.json  install_safe.sh  justfile  open-interpreter-agent-complete.adl  pyproject.toml  run_safe.py  safe_config.yaml  safe_mode.py  test_safe_mode.py
codex-rs/app-server-client/: BUILD.bazel  Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: lib.rs  service.rs
codex-rs/code-mode/src/runtime/: mod.rs
codex-rs/root-tui/: Cargo.toml
codex-rs/root-tui/src/: main.rs  startup_status.rs
codex-rs/server-cli/: Cargo.toml
codex-rs/server-cli/src/: cli.rs  cli_common.rs  daemon.rs  exec_forward.rs  home.rs  lib.rs  main.rs  run.rs  startup_preview.rs  system_import.rs
codex-rs/server-cli/tests/: anthropic_tui_flow.rs  exec_wire_paths.rs  frame_parity.rs  live_benchmarks.rs  live_wire_paths.rs  onboarding_branding.rs  onboarding_model_selection.rs  onboarding_provider_paths.rs  skills_command.rs  system_import_live.rs  thin_client_dependency.rs  wire_paths.rs
codex-rs/server-cli/tests/common/: mock_anthropic_server.rs  mock_responses_server.rs  mod.rs
codex-rs/tui/: BUILD.bazel  Cargo.toml  tooltips.txt
codex-rs/tui/src/: app.rs  app_event.rs  app_server_session.rs  chatwidget.rs  cli.rs  clipboard_copy.rs  clipboard_paste.rs  cloud_requirements_loader.rs  collaboration_mode_presets.rs  config_write_edits.rs  custom_terminal.rs  feedback_support.rs  history_cell.rs  insert_history.rs  legacy_core.rs  lib.rs  login_support.rs  low_memory.rs  main.rs  markdown_render.rs  markdown_render_tests.rs  markdown_stream.rs  model_migration.rs  multi_agents.rs  oss_provider_bootstrap.rs  oss_selection.rs  plugin_mentions.rs  product_branding.rs  provider_model_flow.rs  provider_preset_repair.rs  provider_readiness.rs  resume_picker.rs  review_hints.rs  selection_list.rs  session_log.rs  slash_command.rs  startup_trace.rs  status_indicator_widget.rs  style.rs  telemetry.rs  (+9 more)
codex-rs/tui/src/app/: app_server_adapter.rs  event_dispatch.rs  history_ui.rs  loaded_threads.rs  thread_goal_actions.rs  thread_routing.rs
codex-rs/tui/src/app/snapshots/: codex_tui__app__thread_goal_actions__tests__thread_goal_ephemeral_error_message_renders_snapshot.snap
codex-rs/tui/src/app/tests/: session_summary.rs
codex-rs/tui/src/bottom_pane/: app_link_view.rs  approval_overlay.rs  chat_composer.rs  command_popup.rs  custom_prompt_view.rs  feedback_view.rs  footer.rs  list_selection_filter.rs  mcp_server_elicitation.rs  mod.rs  pending_thread_approvals.rs  selection_popup_common.rs  slash_commands.rs  status_line_setup.rs  status_surface_preview.rs  textarea.rs  title_setup.rs
codex-rs/tui/src/bottom_pane/request_user_input/: render.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap  codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap  codex_tui__bottom_pane__approval_overlay__tests__network_exec_prompt.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_shell_command_absorbs_bang.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap  codex_tui__bottom_pane__chat_composer__tests__slash_popup_mo.snap  codex_tui__bottom_pane__chat_composer__tests__slash_popup_ski.snap  codex_tui__bottom_pane__chat_composer__tests__zellij_empty_composer.snap  codex_tui__bottom_pane__skill_popup__tests__skill_popup_scrolled.snap  codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_runtime_preview_values.snap  codex_tui__bottom_pane__tests__status_only_snapshot.snap  (+4 more)
codex-rs/tui/src/chatwidget/: model_selection.rs  slash_dispatch.rs  status_surfaces.rs
codex-rs/tui/src/exec_cell/: model.rs  render.rs
codex-rs/tui/src/onboarding/: auth.rs  local_provider.rs  mod.rs  model_selection.rs  onboarding_screen.rs  provider_setup.rs  trust_directory.rs  welcome.rs
codex-rs/tui/src/public_widgets/: composer_input.rs  mod.rs  session_header.rs
codex-rs/tui/src/render/: highlight_plain.rs  mod.rs
codex-rs/tui/src/snapshots/: codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap  codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap  codex_tui__cwd_prompt__tests__cwd_prompt_fork_modal.snap  codex_tui__cwd_prompt__tests__cwd_prompt_modal.snap  codex_tui__history_cell__tests__placeholder_session_info_open_interpreter_uses_immediate_tip_snapshot.snap  codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap  codex_tui__history_cell__tests__session_header_snapshot_uses_open_interpreter_branding.snap  codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap  codex_tui__history_cell__tests__session_info_first_event_uses_open_interpreter_branding_snapshot.snap  codex_tui__history_cell__tests__user_history_cell_numbers_multiple_remote_images.snap  codex_tui__history_cell__tests__user_history_cell_renders_remote_image_urls.snap  codex_tui__history_cell__tests__user_history_cell_wraps_and_prefixes_each_line_snapshot.snap  codex_tui__model_migration__tests__model_migration_prompt.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex_mini.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_family.snap  codex_tui__status_indicator_widget__tests__renders_with_queued_messages.snap  codex_tui__status_indicator_widget__tests__renders_with_queued_messages@macos.snap  codex_tui__status_indicator_widget__tests__renders_wrapped_details_panama_two_lines.snap  codex_tui__style__tests__composer_style_uses_nearly_black_bg_in_dark_mode.snap  codex_tui__style__tests__user_message_style_matches_composer_surface_in_dark_mode.snap
codex-rs/tui/src/status/: card.rs  sandbox_summary.rs
(+575 files in other folders)
