[package]
name = "codex-root-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "interpreter-root-tui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-app-server-launcher = { workspace = true }
codex-arg0 = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-protocol = { workspace = true }
codex-tui = { path = "../tui", default-features = false, features = ["thin-client", "direct-login", "startup-network", "extended-mentions", "rich-media", "structured-mcp-content"] }
codex-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
