[package]
name = "codex-server-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "interpreter"
path = "src/main.rs"

[[bin]]
name = "interpreter-tui"
path = "src/bin/interpreter_tui.rs"

[[bin]]
name = "interpreter-root-tui"
path = "src/bin/interpreter_root_tui.rs"

[[bin]]
name = "interpreter-app-server"
path = "src/bin/interpreter_app_server.rs"

[lib]
name = "codex_server_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-app-server = { workspace = true }
codex-arg0 = { workspace = true }
codex-core = { workspace = true }
codex-git-utils = { workspace = true }
codex-login = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-protocol = { workspace = true }
codex-tui = { path = "../tui", default-features = false, features = ["thin-client", "direct-login"] }
codex-utils-cli = { workspace = true }
codex-utils-home-dir = { workspace = true }
codex-utils-pty = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
vt100 = { workspace = true }
wiremock = { workspace = true }
